# raytracer

./: .clang-tidy  CMakeLists.txt  README.md  box.hpp  camera.hpp  entity.hpp  image.hpp  kdtree-scene.hpp  lambertian.hpp  main.cpp  material.hpp  metal.hpp  random.hpp  ray.hpp  scene.hpp  sphere.hpp
src/: box.cpp  box.hpp  camera.hpp  entity.cpp  entity.hpp  image.hpp  kdtree-scene.hpp  lambertian.hpp  main.cpp  metal.hpp  physics-material.cpp  physics-material.hpp  random.cpp  random.hpp  ray.hpp  scene.hpp  sphere.cpp  sphere.hpp  vec3.hpp
